# scanned-image-processor

./: .gitignore  AGENTS.md  PRODUCT.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css  types.ts
apps/web/src/lib/: canvasCrop.ts  filenames.ts  geometry.ts  persistence.ts  sessionStore.ts
apps/web/src/test/: filenames.test.ts  geometry.test.ts
apps/web/src/workers/: crop.worker.ts  detect.worker.ts
scanned_image_processor/: cli.py  crop.py
