[project]
name = "scanned-image-processor"
version = "0.1.0"
description = "Auto-crop scanned album photos using edge detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless>=4.13.0.92",
]

[project.scripts]
scan-crop = "scanned_image_processor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scanned_image_processor"]

[tool.uv]
package = true
